# mialibrary

./: .coverage  .gitignore  MANIFEST.in  README.md  checking_input.ipynb  pyproject.toml  requirements.txt  setup.py
examples/: mialib_example_1_quick_start.ipynb  mialib_example_2_lira_evaluation.ipynb  mialib_example_3_lira_attack.ipynb  mialib_example_4_rmia_quick_start.ipynb
mialibrary/: data_loader.py  plot.py
mialibrary/lira/: check_types.py  compute_score.py  fast_lira.py  process_fast_lira.py  simple_lira.py  validate_inputs.py
mialibrary/rmia/: check_types.py  compute_score.py  process_rmia.py  rmia.py  transform_inputs.py  validate_inputs.py
tests/: test_check_types.py  test_data_loader.py  test_validate_inputs.py  test_validate_outputs.py
